clusters/cl01tl/manifests/ntfy/HTTPRoute-http-route-ntfy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: http-route-ntfy
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/part-of: ntfy
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - ntfy.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: ntfy
          port: 80
          weight: 100
